--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html><html lang="en"><head>
   <meta charset="utf-8">
-  <title>NewProject</title>
+  <title>Profiles</title>
   <script>document.write('<base href="' + document.location + '" />');</script>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 <style>@import url(https://fonts.googleapis.com/css?family=Open+Sans:400,500,600,700);body{font-family:Open Sans}*{padding:0;margin:0;border:0}*,:after,:before{box-sizing:border-box}</style><link rel="stylesheet" href="styles.69b5e09fa171e98a5360.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles.69b5e09fa171e98a5360.css"></noscript></head>
+
 <body>
   <app-root></app-root>
-<script src="runtime.5342b68006af8321a435.js" defer></script><script src="polyfills.780a429ddec820cc4040.js" defer></script><script src="main.deb568f82a242e4ca4a4.js" defer></script>
+<script src="runtime.5342b68006af8321a435.js" defer></script><script src="polyfills.780a429ddec820cc4040.js" defer></script><script src="main.cf5ba3ec77540d4af284.js" defer></script>
 
 </body></html>
